# hdx-scraper-unhcr-microdata

./: .pre-commit-config.yaml  README.md  docker-compose.yml  docker-requirements.txt  hatch.toml  pyproject.toml  requirements-test.txt  requirements.txt  run.py  run_env  test-requirements.txt  unhcr.py
.github/workflows/: run-python-script.yaml  run-python-script.yml  run-python-tests.yml
config/: hdx_dataset_static.yml  project_configuration.yml
src/hdx/scraper/unhcr/microdata/: __main__.py  pipeline.py
src/hdx/scraper/unhcr/microdata/config/: project_configuration.yaml
tests/: test_unhcr.py
tests/config/: project_configuration.yaml  project_configuration.yml
tests/fixtures/: metadata_187.json  metadata_272.json
